src/test/resources/extension/valid/newtype/heapMember.awsl
begin

newtype Foo is
    int[] arr;
end

int[] arr = [1, 2, 3];
Foo foo = Foo(arr);
var a = foo.arr;
println a[2];

end