src/test/resources/extension/invalid/trait/noDefaultArrayForNotDefaultType.awsl
begin

newtype Goat is
    string baa;
end

Goat[] flock = arrayOf(100);   # no Default Trait for Goat, semantic error!

end